--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>vecmath</artifactId>
             <version>1.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-sheets</artifactId>
+            <version>v4-rev481-1.22.0</version>
+        </dependency>
 <!--        <dependency> //For checking ContentType/MimeType (but it is an extra jar)
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
