Preparation to extend hub library with static methods

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,19 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin> 
+            </plugin>
+            
+            <!-- compile method parameters for reflection -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             
             <!-- https://stackoverflow.com/questions/574594/how-can-i-create-an-executable-runnable-jar-with-dependencies-using-maven -->
             <plugin>
