--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <version>2.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.juniversalchardet</groupId>
+            <artifactId>juniversalchardet</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies>
    
     <properties>
